--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
     {
       "source": "/api/generate_image",
       "destination": "http://exosky-backend.eastus.cloudapp.azure.com:5000/generate_image"
+    },
+    {
+      "source": "/api/generate_image_location",
+      "destination": "http://exosky-backend.eastus.cloudapp.azure.com:5000/generate_image?city=toronto&country=canada"
     }
 
   ]
